--- a/Local_Run_Model/Day 4 Testing Student Models/Resnet On D1 No aug.ipynb
+++ b/Local_Run_Model/Day 4 Testing Student Models/Resnet On D1 No aug.ipynb
@@ -740,7 +740,7 @@
    "id": "129bdb33-ddf0-4e4f-b8dd-e5bc1b3ae7ca",
    "metadata": {},
    "source": [
-    "# VGG16 MODEL"
+    "# Resnet Student MODEL"
    ]
   },
   {
