--- a/Final Experiments/Single teacher Single Student/VGG Teacher/d2/VGG_xception_d2.ipynb
+++ b/Final Experiments/Single teacher Single Student/VGG Teacher/d2/VGG_xception_d2.ipynb
@@ -1633,7 +1633,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": null,
    "id": "8d0c14b2-fd95-445b-a918-6363bc2bbcc7",
    "metadata": {},
    "outputs": [
@@ -1809,18 +1809,18 @@
     "    alpha=0.5,\n",
     "    patience=10,\n",
     "    \n",
-    "    save_path=\"xception_2.h5\"\n",
+    "    save_path=\"VGG_xception_d2.h5\"\n",
     ")\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": null,
    "id": "7b91b8b9-540f-4b54-926f-7fa4adb0fa92",
    "metadata": {},
    "outputs": [],
    "source": [
-    "student_model.load_weights('xception_2.h5')"
+    "student_model.load_weights('VGG_xception_d2.h5')"
    ]
   },
   {
@@ -2019,7 +2019,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": null,
    "id": "fcdc42eb-e7f6-47c6-a8e2-2e864b20b03b",
    "metadata": {},
    "outputs": [],
@@ -2030,7 +2030,7 @@
     "history_without_model = {key: value for key, value in history.items() if key != 'best_model'}\n",
     "\n",
     "# Save the dictionary\n",
-    "with open('xception_2.pkl', 'wb') as file:\n",
+    "with open('VGG_xception_d2.pkl', 'wb') as file:\n",
     "    pickle.dump(history_without_model, file)\n",
     "\n",
     "\n"
@@ -2038,13 +2038,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": null,
    "id": "d2bab1cf-0c0d-4d4c-b5bb-91fe9975c113",
    "metadata": {},
    "outputs": [],
    "source": [
     "# Load the history dictionary\n",
-    "with open('xception_2.pkl', 'rb') as file:\n",
+    "with open('VGG_xception_d2.pkl', 'rb') as file:\n",
     "    loaded_history = pickle.load(file)\n"
    ]
   },
