--- a/Final Experiments/Single teacher Single Student/VGG Teacher/d1/VGG_xception_d1.ipynb
+++ b/Final Experiments/Single teacher Single Student/VGG Teacher/d1/VGG_xception_d1.ipynb
@@ -704,57 +704,11 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 22,
-   "id": "68fdd1e3-e644-4246-8f2c-f6adf8ac4015",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def CM(model, test_generator, categories):\n",
-    "    \"\"\"\n",
-    "    Function to return the confusion matrix of a given CNN model.\n",
-    "    \"\"\"\n",
-    "    from sklearn.metrics import confusion_matrix\n",
-    "    # Predictions on test dataset\n",
-    "    predictions = model.predict(test_generator)\n",
-    "    predicted_categories = np.argmax(predictions, axis=1)\n",
-    "    true_categories = test_generator.classes\n",
-    "\n",
-    "    # Create a confusion matrix\n",
-    "    confusion_matrix_array = confusion_matrix(true_categories, predicted_categories)\n",
-    "    print(f\"Classification Report for {model}:\")\n",
-    "    print(classification_report(true_categories, predicted_categories, target_names=categories))\n",
-    "\n",
-    "    return confusion_matrix_array\n",
-    "\n",
-    "\n",
-    "def calculate_metrics(confusion_matrix, categories):\n",
-    "    \"\"\"\n",
-    "    Function to calculate important metrics for multi-classification problems.\n",
-    "    \"\"\"\n",
-    "    # Calculating 4 different metrics\n",
-    "    precision = np.diag(confusion_matrix) / np.sum(confusion_matrix, axis=0)\n",
-    "    recall = np.diag(confusion_matrix) / np.sum(confusion_matrix, axis=1)\n",
-    "    f1_score = 2 * (precision * recall) / (precision + recall)\n",
-    "    accuracy = np.sum(np.diag(confusion_matrix)) / np.sum(confusion_matrix)\n",
-    "\n",
-    "    # Printing the results based on each category\n",
-    "    for i, category in enumerate(categories):\n",
-    "        print(f\"Class: {category.title()}\")\n",
-    "        print(f\"Precision: {precision[i]:.3f}\")\n",
-    "        print(f\"Recall: {recall[i]:.3f}\")\n",
-    "        print(f\"F1-Score: {f1_score[i]:.3f}\\n\")\n",
-    "\n",
-    "    # Showing the total accuracy of the model\n",
-    "    print(f\"\\nAccuracy: {accuracy:.3f}\")"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "id": "129bdb33-ddf0-4e4f-b8dd-e5bc1b3ae7ca",
    "metadata": {},
    "source": [
-    "# VGG16 MODEL"
+    "# VGG16 MODEL - Teacher 1"
    ]
   },
   {
@@ -936,13 +890,6 @@
     "checkpoint_path = r'D:\\Mahir\\Brain\\Checkpoints\\vgg16_no_aug_d1_epoch50_p_7.keras'\n",
     "model_checkpoint = ModelCheckpoint(checkpoint_path, monitor='val_loss', save_best_only=True, verbose=1)\n",
     "\n",
-    "# vgg_history = model_vgg.fit(\n",
-    "#     train_generator,\n",
-    "#     epochs=num_epochs,\n",
-    "#     validation_data=val_generator,\n",
-    "#     callbacks=[early_stopper, model_checkpoint]\n",
-    "# )\n",
-    "\n",
     "teacher.load_weights(checkpoint_path)\n",
     "\n",
     "teacher.summary()"
@@ -965,16 +912,8 @@
     }
    ],
    "source": [
-    "# train_score = teacher.evaluate(train_generator, verbose=1)\n",
-    "# valid_score = teacher.evaluate(val_generator, verbose=1)\n",
     "test_score = teacher.evaluate(test_generator, verbose=1)\n",
     "\n",
-    "# print(f\"Train Loss: {train_score[0]:.4f}\")\n",
-    "# print(f\"Train Accuracy: {train_score[1]*100:.2f}%\")\n",
-    "# print('-' * 20)\n",
-    "# print(f\"Validation Loss: {valid_score[0]:.4f}\")\n",
-    "# print(f\"Validation Accuracy: {valid_score[1]*100:.2f}%\")\n",
-    "# print('-' * 20)\n",
     "print(f\"Test Loss: {test_score[0]:.4f}\")\n",
     "print(f\"Test Accuracy: {test_score[1]*100:.2f}%\")\n"
    ]
@@ -984,7 +923,7 @@
    "id": "0088b847-dd8d-44a0-b3f4-a056e1faca1d",
    "metadata": {},
    "source": [
-    "### Resnet Student"
+    "### Tiny Xception - Student 2"
    ]
   },
   {
@@ -1834,7 +1773,6 @@
     }
    ],
    "source": [
-    "# Example: Plot training and validation losses\n",
     "import matplotlib.pyplot as plt\n",
     "\n",
     "# Extract losses and accuracies\n",
@@ -1863,14 +1801,6 @@
     "plt.legend()\n",
     "plt.show()\n"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "54b0abef-0dd8-455a-aabf-a5144eecb36e",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
