--- a/Final Experiments/Teachers/VGG16_Xception_No_aug_D2.ipynb
+++ b/Final Experiments/Teachers/VGG16_Xception_No_aug_D2.ipynb
@@ -431,7 +431,6 @@
     }
    ],
    "source": [
-    "# Count of images in each class in train data\n",
     "plt.figure(figsize=(15,7))\n",
     "ax = sns.countplot(data=train_data , y=train_data ['Class'])\n",
     "\n",
@@ -687,52 +686,6 @@
     "  plt.legend()\n",
     "\n",
     "  plt.style.use('default')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 21,
-   "id": "68fdd1e3-e644-4246-8f2c-f6adf8ac4015",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def CM(model, test_generator, categories):\n",
-    "    \"\"\"\n",
-    "    Function to return the confusion matrix of a given CNN model.\n",
-    "    \"\"\"\n",
-    "    from sklearn.metrics import confusion_matrix\n",
-    "    # Predictions on test dataset\n",
-    "    predictions = model.predict(test_generator)\n",
-    "    predicted_categories = np.argmax(predictions, axis=1)\n",
-    "    true_categories = test_generator.classes\n",
-    "\n",
-    "    # Create a confusion matrix\n",
-    "    confusion_matrix_array = confusion_matrix(true_categories, predicted_categories)\n",
-    "    print(f\"Classification Report for {model}:\")\n",
-    "    print(classification_report(true_categories, predicted_categories, target_names=categories))\n",
-    "\n",
-    "    return confusion_matrix_array\n",
-    "\n",
-    "\n",
-    "def calculate_metrics(confusion_matrix, categories):\n",
-    "    \"\"\"\n",
-    "    Function to calculate important metrics for multi-classification problems.\n",
-    "    \"\"\"\n",
-    "    # Calculating 4 different metrics\n",
-    "    precision = np.diag(confusion_matrix) / np.sum(confusion_matrix, axis=0)\n",
-    "    recall = np.diag(confusion_matrix) / np.sum(confusion_matrix, axis=1)\n",
-    "    f1_score = 2 * (precision * recall) / (precision + recall)\n",
-    "    accuracy = np.sum(np.diag(confusion_matrix)) / np.sum(confusion_matrix)\n",
-    "\n",
-    "    # Printing the results based on each category\n",
-    "    for i, category in enumerate(categories):\n",
-    "        print(f\"Class: {category.title()}\")\n",
-    "        print(f\"Precision: {precision[i]:.3f}\")\n",
-    "        print(f\"Recall: {recall[i]:.3f}\")\n",
-    "        print(f\"F1-Score: {f1_score[i]:.3f}\\n\")\n",
-    "\n",
-    "    # Showing the total accuracy of the model\n",
-    "    print(f\"\\nAccuracy: {accuracy:.3f}\")"
    ]
   },
   {
@@ -1060,7 +1013,7 @@
     "import pickle\n",
     "\n",
     "# Save the vgg_history object using pickle\n",
-    "with open('vgg_history_no_aug_d2_epoch_50_p_7.pkl', 'wb') as f:\n",
+    "with open('vgg16_no_aug_d2.pkl', 'wb') as f:\n",
     "    pickle.dump(vgg_history.history, f)\n",
     "\n",
     "print(\"vgg_history saved successfully.\")\n"
@@ -1082,7 +1035,7 @@
    ],
    "source": [
     "# Load the vgg_history object\n",
-    "with open('vgg_history_no_aug_d2_epoch_50_p_7.pkl', 'rb') as f:\n",
+    "with open('vgg16_no_aug_d2.pkl', 'rb') as f:\n",
     "    loaded_history = pickle.load(f)\n",
     "\n",
     "print(\"vgg_history loaded successfully.\")\n"
@@ -1610,7 +1563,7 @@
     "import pickle\n",
     "\n",
     "# Save the vgg_history object using pickle\n",
-    "with open('xception_no_aug_d2_epoch_50_p_7_lr_1e3.pkl', 'wb') as f:\n",
+    "with open('xception_no_aug_d2.pkl', 'wb') as f:\n",
     "    pickle.dump(xception_history.history, f)\n",
     "\n",
     "print(\"xception_history saved successfully.\")\n"
@@ -1632,7 +1585,7 @@
    ],
    "source": [
     "# Load the vgg_history object\n",
-    "with open('xception_no_aug_d2_epoch_50_p_7_lr_1e3.pkl', 'rb') as f:\n",
+    "with open('xception_no_aug_d2.pkl', 'rb') as f:\n",
     "    loaded_history_x = pickle.load(f)\n",
     "\n",
     "print(\"xception_history loaded successfully. into loaded_history_x\")\n"
